...
        decoration: BoxDecoration(
          color: const Color(0xFF00E676),
          borderRadius: BorderRadius.circular(14),
        ),
        child: Center(
          child: Text(
            'INICIAR',
            style: GoogleFonts.spaceMono(
              fontSize: 18,
              fontWeight: FontWeight.w700,
              letterSpacing: 4,
              color: Colors.black,
            ),
...
